[package]
name = "mouse-keyboard-input"
version = "0.1.0"
authors = ["fulara <ntszar@gmail.com>"]
edition = "2018"

[dependencies]
lazy_static = "1"
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser"] }

[target.'cfg(target_os="linux")'.dependencies]
input = "0.6"
nix = "0.22"
uinput = { version = "0.1.3", default-features = false }
