[package]
name = "mki"
version = "0.2.0-alpha"
description = "Windows and Linux library for registring global input hooks and simulating keyboard and mouse events."
authors = ["fulara <ntszar@gmail.com>"]
keywords = ["mouse", "keyboard", "input", "hook", "autohotkey"]
readme = "README.md"
homepage = "https://github.com/fulara/mki-rs"
repository = "https://github.com/fulara/mki-rs"
categories = ["api-bindings"]
documentation = "https://docs.rs/mki-rs"
license = "MIT"
edition = "2018"

[dependencies]
lazy_static = "1"
libc = "0.2"
serde = { version = "1", features = ["derive"]}
serde_yaml = "0.8"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser"] }

[target.'cfg(target_os="linux")'.dependencies]
input = "0.6"
nix = "0.22"
uinput = { version = "0.1.3", default-features = false }
x11 = { version = "2", features = ["xlib", "xtest"] }
