[package]
name = "mki"
version = "0.2.3"
description = "Windows and Linux library for registring global input hooks and simulating keyboard and mouse events."
authors = ["fulara <ntszar@gmail.com>"]
keywords = ["mouse", "keyboard", "input", "hook", "autohotkey"]
readme = "README.md"
homepage = "https://github.com/fulara/mki-rust"
repository = "https://github.com/fulara/mki-rust"
categories = ["api-bindings"]
documentation = "https://docs.rs/mki-rust"
license = "MIT"
edition = "2018"

[dependencies]
lazy_static = "1"
libc = "0.2"
serde = { version = "1", features = ["derive"]}
serde_yaml = "0.8"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser"] }

[target.'cfg(target_os="linux")'.dependencies]
input = "0.7"
nix = "0.24"
uinput = { version = "0.1.3", default-features = false }
x11 = { version = "2", features = ["xlib", "xtest"] }
